--- a/notes/1. 오브젝트와 의존관계.md
+++ b/notes/1. 오브젝트와 의존관계.md
@@ -38,4 +38,58 @@
    
   * getConnection()이 팩토리 메소드
   * 서브클래스의 getConnection()을 통해 만들어진 Connection 오브젝트의 종류가 달라진다.
-  * UserDao는 Connection 인터페이스 타입의 오브젝트라는 것 외에는 관심을 두지 않는다.
+  * UserDao는 Connection 인터페이스 타입의 오브젝트라는 것만 알면되므로 팩토리 메소드 패턴
+  * [참고](https://jdm.kr/blog/180)
+  
+* **상속의 단점**  
+  * 위 디자인 패턴들은 상속을 사용했다는 단점이 있다. 아래는 상속의 단점이다.
+  * 자바는 클래스의 다중상속을 허용하지 않는다. 
+    * 따라서 다른 목적으로 상속을 적용할 수 없다.
+  * 상속을 통한 상하위 클래스의 관계는 밀접하다.
+    * 서브 클래스는 슈퍼클래스의 기능을 직접 사용할 수 있다.
+    * 그래서 슈퍼클래스 내부의 변경이 있을 때 서브 클래스를 수정해야 할 수도 있다.
+
+### 인터페이스 도입
+* 인터페이스란
+  * 어떤 일을 하겠다는 기능만 정의하고, 구체적인 기능은 구현 클래스에 맡김
+  * 구현클래스의 정보는 감추고 인터페이스를 사용 : `다형성`
+  ```java
+  # 인터페이스 정의
+  public interface ConnectionMaker {
+      public Connection makeConnection() throws ClassNotFoundException, SQLException;
+  }
+  
+  # 인터페이스 구현 클래스, makeConnection() 메소드 정의
+  public class DConnectionMaker implements ConnectionMaker {
+      public Connection makeConnection() throws ClassNotFoundException, SQLException {
+          Class.forName("com.mysql.jdbc.Driver");
+          return DriverManager.getConnection(
+                "jdbc:mysql://localhost:53306/springbook", "spring", "book");
+     }
+  }
+  ```
+  ```java
+  public class UserDao {
+    private ConnectionMaker connectionMaker;
+  
+    # 인터페이스 타입으로 구현 클래스의 인스턴스를 받아 사용
+    # 즉 UserDao는 어떤 구현 클래스를 사용해야할지 신경쓰지 않아도 된다.
+    public UserDao(ConnectionMaker connectionMaker) {
+        this.connectionMaker = connectionMaker;
+    }
+    ...
+  }
+  
+  // UserTest에서 ConnectionMaker 인터페이스의 구현 클래스 인스턴스를 생성하고, UserDao 생성자 파라미터에 넣어준다.
+  public class UserDaoTest {
+      public static void main(String[] args) throws ClassNotFoundException, SQLException {
+          ConnectionMaker connectionMaker = new DConnectionMaker();
+          UserDao dao = new UserDao(connectionMaker);
+      }
+  }
+  ```
+  
+### 원칙과 패턴
+* 개방 폐쇄 원칙
+  * 인터페이스를 통해 확장에는 열려있고, 인터페이스를 이용하는 클래스는 변경에 닫혀있다.
+  
