--- a/notes/1. 오브젝트와 의존관계.md
+++ b/notes/1. 오브젝트와 의존관계.md
@@ -33,10 +33,8 @@
     * 따라서 어떤 클래스의 오브젝트를 만들어 리턴할지는 서브클래스가 결정하고, 슈퍼클래스의 관심사가 아니다.  
   * 서브클래스에서 오브젝트 생성 방법과 클래스를 결정할 수 있도록 미리 정의해둔 메소드를 `팩토리 메소드`라고 한다.
   * 오브젝트 생성 방법을 슈퍼클래스의 기본 코드에서 독립시키는 방법을 `팩토리 메소드 패턴`이라고 한다.
+  <img src="https://user-images.githubusercontent.com/50009240/190912064-c1432b0c-8e76-4841-bbb0-f5e46c427051.png" width="650" height="300">
 
-  ![](../../../Pictures/Screenshot from 2022-09-13 23-51-27.png)
-   
-  * getConnection()이 팩토리 메소드
   * 서브클래스의 getConnection()을 통해 만들어진 Connection 오브젝트의 종류가 달라진다.
   * UserDao는 Connection 인터페이스 타입의 오브젝트라는 것만 알면되므로 팩토리 메소드 패턴
   * [참고](https://jdm.kr/blog/180)
@@ -91,5 +89,27 @@
   
 ### 원칙과 패턴
 * 개방 폐쇄 원칙
-  * 인터페이스를 통해 확장에는 열려있고, 인터페이스를 이용하는 클래스는 변경에 닫혀있다.
+  * 확장에는 열려 있어야 하고, 변경에는 닫혀 있어야 한다.
+  * 인터페이스를 통해 확장에는 열려있고, 인터페이스를 사용하는 클래스는 변경에 닫혀있다.
+  * 예시: UserDao
+    * 인터페이스를 통해 DB 연결 방법의 기능을 확장하는데 열려있다.
+    * UserDao는 DB 연결 방법에 영향을 받지 않으므로 변경에는 닫혀있다.
+* 높은 응집도와 낮은 결합도
+  * 개방폐쇄 원칙은 높은 응집도와 낮은 결합도를 갖는다.
+  * `높은 응집도`
+    * 하나의 모듈, 클래스가 하나의 책임 또는 관심사에 집중되어 있다는 의미
+    * 결과적으로 변화가 일어날 때 해당 모듈에서 변하는 부분이 크다. 다른 모듈에 영향을 덜 미친다.
+  * `낮은 결합도`
+    * 결합도란 하나의 오브젝트가 변경이 일어날 때 관계를 맺고 있는 다른 오브젝트에게 변화를 요구하는 정도이다.
+    * 낮은 결합도란 하나의 변경이 발생할 때 다른 모듈과 객체로 변경에 대한 요구가 전파되지 않는 상태
+    * 예시: ConnectionMaker, UserDao
+      * ConnectionMaker 구현 클래스가 바뀌어도, DAO 코드는 변경될 필요가 없다. 
+      * 즉, 인터페이스를 통해 ConnectionMaker와 UserDao의 결합도가 낮아졌다.
+* 전략 패턴
+  * 자신의 기능 맥락에서 필요에 따라 변경이 필요한 알고리즘을 인터페이스를 통해 통째로 외부로 분리시키고, 
+  * 이를 구현한 구체적인 알고리즘 클래스를 필요에 따라 바꿔서 사용할 수 있게 하는 디자인 패턴이다.
+  * 즉, 변경이 필요한 알고리즘을 인터페이스를 사용해 독립적인 책임으로 분리하는 것이다.
+* 스프링
+  * 객체지향적 설계 원칙과 디자인 패턴에 나타난 장점을 자연스럽게 개발자들이 활용할 수 있게 해주는 프레임워크이다.  
+     
   
