--- a/notes/1. 오브젝트와 의존관계.md
+++ b/notes/1. 오브젝트와 의존관계.md
@@ -1,3 +1,5 @@
+
+## 1.3 DAO의 확장
 ### 디자인 패턴: 상속을 통한 확장
 * **템플릿 메소드 패턴: template method pattern**
   * 슈퍼 클래스에 기본적인 로직의 흐름을 만들고, 그 기능의 일부를 추상 메소드나 오버라이딩이 가능한 protected 메소드 등으로 만든 뒤 서브 클래스에서 해당 메소드를 필요에 맞게 구현해서 사용하도록 하는 디자인 패턴
@@ -87,6 +89,10 @@
   }
   ```
   
+  <img src="https://user-images.githubusercontent.com/50009240/190914209-7fa818d0-2a89-4364-8208-20045cd4b7ee.png" width="600" height="200">
+  
+  * 인터페이스를 통해 UserDao와 ConnectionMaker 클래스들을 분리하고, 서로 영향을 주지 않으면서도 필요에 따라 자유롭게 확장할 수 있는 구조가 됐다.
+  
 ### 원칙과 패턴
 * 개방 폐쇄 원칙
   * 확장에는 열려 있어야 하고, 변경에는 닫혀 있어야 한다.
@@ -112,4 +118,72 @@
 * 스프링
   * 객체지향적 설계 원칙과 디자인 패턴에 나타난 장점을 자연스럽게 개발자들이 활용할 수 있게 해주는 프레임워크이다.  
      
+## 1.4 제어의 역전(IoC)
+* 간단히 프로그램의 제어 흐름의 구조가 뒤바뀌는 것이라고 할 수 있다. 
+* 제어의 역전에서는 오브젝트가 자신이 사용할 오브젝트를 **직접 생성하거나 스스로 선택하지 않는다**.
+* 제어 권한을 자신이 아닌 다른 대상에게 위임하기 때문이다.
+
+### 제어의 역전 적용예시
+* 위 인터페이스 도입 코드의 문제점
+  * UserDaoTest 클래스는 UserDao의 기능이 잘 동작하는지 테스트하려고 만든 오브젝트이다.
+  * 하지만 ,UserDaoTest 클래스는 어떤 ConnectionMaker 구현 클래스를 사용할지 결정하는 역할을 떠맡았다.
+  * 따라서 UserDao와 ConnectionMaker 구현 클래스의 오브젝트를 만드는 것과, (DaoFactory)
+  * 그렇게 만들어진 두 개의 오브젝트 연결하는 기능을 분리해야 한다. (UserDaoTest)
+* 팩토리
+  * 기능의 분리를 위해 팩토리 클래스를 하나 만들어보자.
+  * 해당 클래스의 역할은 객체의 생성 방법을 결정하고, 그렇게 만들어진 오브젝트를 돌려주는 것이다.
+  ```java
+  package springbook.user.dao;
   
+  // UserDao의 생성 책임을 맡은 팩토리 클래스
+  public class DaoFactory {
+    public UserDao userDao() {
+		     ConnectionMaker connectionMaker = new DConnectionMaker();
+		     UserDao userDao = new UserDao(connectionMaker);
+       return userDao;
+    }
+  }
+  
+  // 팩토리 클래스로부터 UserDao를 가져와 사용하는 클래스
+  public class UserDaoTest {
+    public static void main(String[] args) throws ClassNotFoundException, SQLException {
+		     UserDao dao = new DaoFactory().userDao();
+	     	…
+    }
+  }
+  ```
+  * DaoFactory의 userDao 메소드를 호출하면, DConnectionMaker를 사용해 DB 커넥션을 가져오도록 설정된 UserDao 오브젝트를 돌려준다.
+  * UserDaoTest는 DaoFactory로부터 UserDao 오브젝트를 받아 테스트에 사용한다.
+  * 따라서 UserDaoTest는 UserDao 오브젝트에 신경쓰지 않고, 팩토리로부터 오브젝트를 받아 자신의 관심사인 테스트에 활용함으로써 역할에 따라 클래스를 분리했다.
+* 팩토리 장점
+  * 새로운 ConnectionMaker 구현 클래스(N사, ..)로 변경이 필요하면 DaoFactory를 수정해서 구현 클래스를 생성해 해당 클래스를 사용하는 UserDao 오브젝트를 반환하도록 코드를 수정하면 된다.
+  * 여전히 우리의 핵심 기술이 담긴 UserDao는 변경이 필요 없으므로 안전하게 소스코드를 보존할 수 있다.
+  * 동시에 DB 연결 방식(ConnectionMaker 구현)은 자유롭게 확장 가능하다.
+* 팩토리 구조와 제어의 역전
+  * 원래는 ConnectionMaker의 구현 클래스를 결정하고, 오브젝트를 만드는 제어권은 `UserDao`에게 있었지만, 현재는 `DaoFactory`에게 있다.
+  * `UserDao`는 `DaoFactory`가 넘겨주는 ConnectionMaker 오브젝트를 사용해야 한다.
+  * `UserDaoTest`는 `DaoFactory`가 반환하는 ConnectionMaker를 사용해야 한다.
+  * 따라서 UserDao, UserDaoTest는 제어의 권한을 `DaoFactory`에 넘겼으니 수동적인 존재가 되었다.
+  * 이것이 제어의 역전(IoC)이 일어난 상황.
+  > 제어의 역전에서는 프레임워크 또는 컨테이너와 같이 애플리케이션 컴포넌트의 생성과 관계설정, 사용, 생명주기 관리   
+  > 등을 관장하는 존재가 필요하다.  
+  > `DaoFactory`는 IoC 컨테이너 또는 IoC 프레임워크 라고 할 수 있다.
+
+## 1.5 스프링의 IoC
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
