--- a/notes/2. 테스트.md
+++ b/notes/2. 테스트.md
@@ -1,1 +1,34 @@
 # 테스트
+
+## 2.1 UserDaoTest 다시 보기
+* 작은 단위의 테스트
+  * `단위 테스트`란 작은 단위의 코드에 대해 테스트를 수행한 것이다.
+  * 일반적으로 단위는 작을수록 좋다. 다른 코드에 상관없이 테스트가 동작할 수 있으면 좋다.
+  <br></br>
+  > **테스트 중에 DB가 사용되면 단위 테스트가 아닌가?**  
+  > UserDaoTest를 수행할 때 매번 USER 테이블의 내용을 비우고 테스트를 진행했다.  
+  > 이렇게 사용할 DB의 상태를 테스트가 관장하고 있다면 이는 단위 테스트라고 해도 된다.  
+  > 다만, DB의 상태가 매번 달라지고, 테스트를 위해 DB를 특정 상태로 만들어줄 수 없다면 단위테스트로서 가치가 없어진다.  
+  > 따라서 통제할 수 없는 외부의 리소스에 의존하는 테스트는 단위 테스트가 아니라고 보기도 한다.  
+
+### UserDAoTest의 문제점
+* 수동 확인 작업의 번거로움
+  * 테스트 수행작업과 입력 데이터 준비는 자동으로 되어 있음
+  * 그러나 결과는 여전히 console 창의 결과를 사람의 눈으로 판단해야 한다.
+  * 이것 또한 검증할 양이 많아지면 사람의 눈으로 일일히 확인 불가능하다.
+  * `해결 방법`: 테스트 내 검증 로직 구현
+* 실행 작업의 번거로움
+  * 즉각 실행가능한 main()을 사용하지만, 이런 Test용 클래스가 한 에플리케이션에 수백개라면?
+  * main() 메소드를 수백번 직접 실행해야한다.
+  * 좀 더 체계적으로 테스트를 실행할 방법이 필요하다. 
+  * `해결 방법`: JUnit 사용
+
+## 2.2 UserDaoTest 개선
+### JUnit
+  * JUnit은 자바 테스팅 프레임워크이다.
+      * 프레임워크의 기본 동작원리는 제어의 역전(IoC)이다.
+      * 프레임워크는 개발자가 만든 클래스에 대한 제어 권한을 넘겨받아 애플리케이션의 흐름을 제어한다.
+      * 클래스의 오브젝트를 생성하고 실행하는 일은 프레임워크에 의해 진행된다.
+  * JUnit의 조건
+    * 메소드가 `public`으로 선언되어야 한다.
+    * 메소드에 `@Test` 어노테이션을 붙여야 한다. 
