--- a/notes/4. 예외.md
+++ b/notes/4. 예외.md
@@ -29,7 +29,6 @@ try {
 * 따라서 catch 블록을 이용해 화면에 메시지를 출력한 것은 예외를 처리한 게 아니다.
 
 ### 무의미하고 무책임한 throw
-예외를 일일이 catch하기 귀찮고, 매번 정확하게 예외 이름을 적어서 
 ```java
 public void method1() throws Exception { 
     method2();
@@ -43,4 +42,9 @@ public void method3() throws Exception {
     ...
 }
 ```
-* 
+* 예외를 일일이 catch하기 귀찮고, 매번 정확하게 예외 이름을 적어서 선언하기도 귀찮으니, 아예 throws Exception을 모든 메소드에 넣는 경우이다.
+* 이는 정말 실행 중에 예외적인 상황이 발생할 수 있다는 것인지, 아니면 습관적으로 붙여놓은 것인지 알 수 없다.
+* 결국 이런 메소드를 호출하는 메소드에서도 throws Exception을 따라 붙이는 수밖에 없다.
+* 결과적으로 적절한 처리를 통해 복구될 수 있는 예외상황도 제대로 다룰 수 있는 기회를 박탈당한다.
+
+위 예시들은 매우 좋지 않은 예외처리 방법이다.
