--- a/notes/4. 예외.md
+++ b/notes/4. 예외.md
@@ -48,3 +48,57 @@ public void method3() throws Exception {
 * 결과적으로 적절한 처리를 통해 복구될 수 있는 예외상황도 제대로 다룰 수 있는 기회를 박탈당한다.
 
 위 예시들은 매우 좋지 않은 예외처리 방법이다.
+
+### 4.1.2 예외의 종류와 특징
+자바에서 throw를 통해 발생시킬 수 있는 예외는 크게 세 가지가 있다.
+
+
+**Error**
+  * java.lang.Error 클래스의 서브클래스들이다.
+  * 에러는 시스템에 비정상적인 상황이 발생했을 경우에 사용된다.
+  * OutOfMemoryError, ThreadDeath와 같은 에러로 주로 JVM에서 발생시키는 예외이다. 
+  * 이는 애플리케이션에서 대응할 수 없는 에러이므로 이런 에러에 대한 처리는 신경 쓰지 않아도 된다.
+
+**Exception과 Checked Exception**
+  * java.lang.Exception 클래스와 그 서브클래스로 정의되는 예외들은 애플리케이션 코드의 작업 중 예외상황이 발생했을 경우 사용한다.
+  * Exception 클래스는 `checked exception`과 `unchecked exception`으로 구분된다.
+    * `checked exception`은 Exception 클래스의 서브클래스이면서 RuntimeException 클래스를 상속하지 않은 것들이다.
+    * `unchecked exception`은 RuntimeException을 상속한 클래스들을 말한다.
+  * checked exception가 발생할 수 있는 메소드를 사용할 경우 반드시 예외 처리 코드를 함께 작성해야 한다.
+  * 사용할 메소드가 checked exception을 던진다면, 이를 catch문으로 잡든지, 아니면 다시 throws를 정의해서 메소드 밖으로 던져야 한다.
+  * 그렇지 않으면 컴파일 에러가 발생한다.
+  * IOException이나 SQLException을 비롯해서 예외적인 상황에서 던져질 가능성이 있는 대부분이 checked exception으로 만들어져 있다.
+
+**RuntimeException과 unchecked exception**
+  * java.lang.RuntimeException 클래스를 상속한 예외들은 명시적인 예외처리를 강제하지 않기 때문에 unchecked exception 또는 런타임 예외라고 한다.
+  * Error와 마찬가지로 chatch 문으로 잡거나 throws로 선언하지 않아도 된다.
+  * 대표적으로 NullPointException, IllegalArgumentException 등이 있다.
+
+### 4.1.3 예외처리 방법
+**예외 복구**  
+* 예외상황을 파악하고 문제를 해결해서 정상 상태로 돌려놓는 것이다.  
+  * 예를 들어, 네트워크 접속이 원활하지 않아서 원격 DB 서버에 접속하다 실패해 SQLException이 발생했다고 생각해보자.  
+  * 이때, 일정 시간 대기했다가 다시 접속을 시도해보는 방법으로 예외 복구를 할 수 있다. 
+* 예외처리 코드를 강제하는 `checked exception`은 위와 같이 예외를 어떤 식으로든 복구할 가능성이 있는 경우에 사용한다.
+* API를 사용하는 개발자에게 예외상황이 발생할 수 있음을 인식하도록 알려주고, 적절한 처리를 시도해보도록 요구하는 것이다.
+
+```java
+int maxretry = MAX_RETRY;
+while(maxretry -- > 0) {
+  try {
+    ... // 예외가 발생할 가능성이 있는 시도
+    return; // 작업 성공
+  }
+  catch(SomeException e) {
+    // 로그 출력. 정해진 시간만큼 대기
+  }
+  finally {
+    // 리소스 반납. 정리 작업
+  }
+}
+throw new RetryFailedException(); // 최대 재시도 횟수를 넘기면 직접 예외 발생
+```
+* 외부 요인으로 인해 예외가 발생하면 MAX_RETRY만큼 재시도를 하는 간단한 예시이다.  
+* 사전에 미리 성공 여부를 확인할 수 없고, 재시도가 의미 있는 경우라면 이렇게 최대 횟수만큼 반복적으로 시도함으로써   
+  예외상황에서 복구되게 할 수 있다.
+
