--- a/notes/4. 예외.md
+++ b/notes/4. 예외.md
@@ -102,3 +102,92 @@ throw new RetryFailedException(); // 최대 재시도 횟수를 넘기면 직접
 * 사전에 미리 성공 여부를 확인할 수 없고, 재시도가 의미 있는 경우라면 이렇게 최대 횟수만큼 반복적으로 시도함으로써   
   예외상황에서 복구되게 할 수 있다.
 
+**예외처리 회피**
+* 예외처리를 자신이 담당하지 않고, 자신을 호출한 쪽으로 던져버리는 것이다.
+* throws 문으로 선언해서 예외가 발생하면 알아서 던지게 하거나, catch문으로 일단 예외를 잡은 후에 로그를 남기고 다시 예외를 던지는 것이다.
+* 예외 처리를 회피하려면 반드시 다른 오브젝트나 메소드가 예외를 대신 처리할 수 있도록 아래와 같이 작성 해야 한다.
+```java
+public void add() throws SQLException {
+  // JDBC API
+}
+```
+```java
+public void add() throws SQLException {
+  try {
+    // JDBC API
+  }
+  catch(SQLException e) {
+    // 로그 출력
+    throw e;
+  }
+}
+```
+* JdbcContext나 JdbTemplate이 사용하는 콜백 오브젝트는 메소드는 ResultSet이나 PreparedStatement 등을 이용해서 작업하다 발생하는 SQLExceptioon을 자신이 처리하지 않고, 템플릿으로 던져버린다.  
+* 콜백 오브젝트의 메소드는 모두 throws SQLException이 붙어 있어 SQLException에 대한 예외를 회피하고 템플릿 레벨에서 처리하도록 던져준다.
+* 예외처리 회피를 위해선 콜백/템플릿처럼 긴밀한 관계에 있는 다른 오브젝트에게 예외처리 책임을 분명히 지게 하거나, 자신을 호출한 쪽에서 예외를 다루는게 최선의 방법이라는 확신이 있어야 한다.
+
+**예외 전환**
+* 예외를 복구해서 정상적인 상태로는 만들 수 없기 때문에 예외를 메소드 밖으로 던지는 것이다.
+* 예외 회피와 달리, 발생한 예외를 그대로 넘기는 것이 아니라 적절한 예외로 전환해서 던진다.
+* `예외 전환 목적 첫번째`: 내부에서 발생한 예외를 그대로 던지는 것이 그 예외상황에 대한 적절한 의미를 부여해주지 못하는 경우에,  
+  의미를 분명히 해줄 수 있는 예외로 바꿔주는 것이다.
+> 예외 전환 예시 (1)
+> * 사용자를 등록하려고 시도햇을 때 아이디가 같은 사용자가 있어 DB 에러가 발생하면 JDBC API는 SQLException을 발생시킨다.   
+> * DAO 메소드가 SQLException을 그대로 밖으로 던져버리면, DAO를 이용해 사용자를 추가하려고한 서비스 계층 등에서는 왜 SQLException이 발생했는지 바로 알 수 없다.
+> * 따라서 DAO에서 SQLException의 정보를 해석해 DuplicateUserIdException 같은 예외로 바꿔 던져주는게 좋다.
+> * 아래는 위와 같이 예외 전환 처리를 해주는 DAO 메소드의 예다.
+> 
+> ```java
+> public void add() throws DuplicateUserIdException, SQLException {
+>   try {
+>     // JDBC를 이용해 user 정보를 DB에 추가하는 코드 또는
+>     // 그런 기능을 가진 다른 SQLException을 던지는 메소드를 호출하는 코드
+>   }
+>   catch(SQLException e) {
+>     // ErrorCode가 MySQL의 "Duplicate Entry(1062)"이면 예외 전환
+>     if (e.getErrorCode() == MysqlErrorNumbers.ER_DUP_ENTRY)
+>         throw DuplicateUserIdException();
+>     else
+>         throw e;
+>   }
+> }
+> ```
+> * 보통 예외 전환 시 원래 발생한 예외를 담아서 `중첩 예외(nested exception)`으로 만드는 것이 좋다.
+> * 중첩 예와는 `getCause()` 메소드를 이용해서 처음 발생한 예외가 무엇인지 확인할 수 있다.
+> ```java
+> catch(SQLException e) { 
+>   ...
+>   throw DuplicateUserIdException(e);
+> }
+> ```
+> ```java
+> catch(SQLException e) {
+>   ...
+>   throw DuplicateUserIdException().initCause(e);
+> }
+> ```
+> * 위와 같이 새로운 예외를 만들면서 `생성자`나 `initCause()` 메소드로 근본 원인이 되는 예외를 넣어주면 된다.
+
+* `예외 전환 목적 두번째`: 예외를 처리하기 쉽고 단순하게 만들기 위해 포장하는 것이다.
+* 주로 예외처리를 강제하는 checked exception을 unchecked exception으로 바꾸는 경우에 사용한다.
+> 예외 전환 예시 (2)
+> * 대표적으로 EJBException을 예로 들 수 있다.
+> * EJB 컴포넌트 코드에서 발생하는 대부분의 checked exception은 비즈니스 로직으로 볼 때 의미 있는 예외이거나 복구 가능한 예외가 아니다.
+> * 이런 경우에는 런타임 예외인 EJBException으로 포장해서 던지는 편이 낫다.
+> ```java
+> try {
+>   OrderHome orderHome = EJBHomeFactory.getInstance().getOrderHome();
+>   Order order = orderHome.findByPrimaryKey(Integer id);
+> } catch (NamingException ne) {
+>   throw new EJBException(ne);
+> } catch (SQLException se) { 
+>   throw new EJBException(se);
+> } catch (RemoteException re) { 
+>   throw new EJBException(re);
+> }
+> ```
+> * EJBException은 RuntimeException 클래스를 상속한 런타임 예외다.
+> * 이렇게 런타임예외로 만들어서 전달하면 EJB는 이를 system exception으로 인식하고 트랜잭션을 자동으로 롤백해준다.
+
+* 애플리케이션 코드에서 의도적으로 던지는 예외는 적절한 대응이나 복구작업이 필요하므로 checked exception을 사용하는 것이 적절하다.
+* 복구가 불가능한 예외라면 가능한 빨리 런타임 예외로 포장해 던져 다른 계층의 메소드에서 불필요한 throws 선언이 들어가지 않도록 해줘야 한다.
