--- a/notes/4. 예외.md
+++ b/notes/4. 예외.md
@@ -191,3 +191,51 @@ public void add() throws SQLException {
 
 * 애플리케이션 코드에서 의도적으로 던지는 예외는 적절한 대응이나 복구작업이 필요하므로 checked exception을 사용하는 것이 적절하다.
 * 복구가 불가능한 예외라면 가능한 빨리 런타임 예외로 포장해 던져 다른 계층의 메소드에서 불필요한 throws 선언이 들어가지 않도록 해줘야 한다.
+
+### 4.1.4 예외처리 전략
+**런타임 예외의 보편화**  
+* checked exception이 발생해도 예외상황을 복구할 수 있는 방법은 많지 않다.
+* 따라서 애플리케이션 차원에서 예외상황을 미리 파악하고, 예외가 발생하지 않도록 차단하는 것이 좋다.
+* 대응이 불가능한 checked exception이라면 빨리 런타임 예외로 전환해서 던지는 것이 낫다.
+> checked exception의 대개는 복구 불가능한 상황이고, 이를 RuntimeException 등으로 포장해서 다시 던질 바에 아예 API 차원에서 런타임 예외를 던지도록 만들자.
+
+**add() 메소드의 예외처리**  
+* 대부분의 SQLException은 복구 불가능한 예외이므로 결국 throws를 타고 계속 앞으로 전달되다가 애플리케이션 밖으로 던져질 것이다.
+* 따라서 런타임 예외로 포장해 바로 던져 그 밖의 메소드들이 신경 쓰지 않게 해주는 편이 낫다.
+* add() 메소드의 `DuplicatedUserIdException`처럼 의미 있는 예외는 add() 메소드를 바로 호출한 오브젝트 대신 더 앞단의 오브젝트에서 다룰 수도 있다.
+* 어디에서든 `DuplicatedUserIdException`을 잡아 처리할 수 있다면 checked exception이 아닌 런타임 예외로 만드는 것이 낫다.
+  * checked exception으로 선언하면 위의 무의미하고 무책임한 throw처럼 add()를 호출하는 모든 메소드에 throws를 붙여야된다.
+  * 따라서 필요하면 언제든 예외를 잡아 처리하고, 필요 없다면 신경 쓰지 않아도 되도록 RuntimeException을 상속한 런타임 예외로 던지는 것이 좋다.
+
+```java
+public class DuplicateUserIdException extends RuntimeException {
+  // 중첩 예외를 만들 수 있도록 생성자 추가 잊지 말 것
+  public DuplicateUserIdException(Throwable cause) {
+    super(cause);
+  }
+}
+```
+* DuplicatedUserIdException을 런타임 예외로 전환 시 add() 메소드는 아래와 같다.
+* SQLException은 대부분 예외 처리가 불가능하므로 DuplicateUserIdException 외 예외 발생 시 unchecked exception으로 포장해서 밖으로 던진다.
+* DuplicateUserIdException 또한 unchecked exception 이지만, 밖의 메소드에서 해당 예외를 잡아 처리할 수 있도록 메소드의 throws 선언에 포함시킨다. 
+
+```java
+public void add() throws DuplicateUserIdException {
+  try {
+    // JDBC를 이용해 user 정보를 DB에 추가하는 코드 또는
+    // 그런 기능이 있는 다른 SQLException을 던지는 메소드를 호출하는 코드
+  }
+  catch (SQLException e) {
+    if (e.getErrorCode() == MysqlErrorNumbers.ER_DUP_ENTRY)
+      throw new DuplicateUserIdException(e);  // 예외 전환 
+    else
+      throw new RuntimeException(e);  // 예외 포장
+  }
+}
+```
+* 결과적으로 add() 메소드를 사용하는 오브젝트는 SQLException을 처리하기 위해 불필요한 throws 선언을 할 필요가 없다.
+* 예외 처리를 하고 싶은 오브젝트에선 DuplicatedUserIdException을 이용해 예외를 처리할 수 있다.
+  * DuplicatedUserIdException이 발생한 경우라면 사용자가 요청한 Id 대신 추천 Id를 만들어 중복 메시지와 함께 제공해줄 수 있겠다.
+
+
+
