--- a/notes/4. 예외.md
+++ b/notes/4. 예외.md
@@ -216,7 +216,7 @@ public class DuplicateUserIdException extends RuntimeException {
 }
 ```
 * DuplicatedUserIdException을 런타임 예외로 전환 시 add() 메소드는 아래와 같다.
-* SQLException은 대부분 예외 처리가 불가능하므로 DuplicateUserIdException 외 예외 발생 시 unchecked exception으로 포장해서 밖으로 던진다.
+* 대부분의 SQLException은 예외 처리가 불가능하므로 DuplicateUserIdException 외 예외 발생 시 unchecked exception으로 포장해서 밖으로 던진다.
 * DuplicateUserIdException 또한 unchecked exception 이지만, 밖의 메소드에서 해당 예외를 잡아 처리할 수 있도록 메소드의 throws 선언에 포함시킨다. 
 
 ```java
@@ -237,5 +237,7 @@ public void add() throws DuplicateUserIdException {
 * 예외 처리를 하고 싶은 오브젝트에선 DuplicatedUserIdException을 이용해 예외를 처리할 수 있다.
   * DuplicatedUserIdException이 발생한 경우라면 사용자가 요청한 Id 대신 추천 Id를 만들어 중복 메시지와 함께 제공해줄 수 있겠다.
 
-
-
+**JdbcTemplate의 SQLException**
+* 대부분의 SQLException은 복구 불가능하므로 가능한 빨리 언체크/런타임 예외로 전환해줘야 한다.
+* 스프링의 JdbcTemplate은 SQLException을 런타임 예외인 `DataAccessExcepiton`으로 포장해서 던져준다.
+* 따라서 JdbcTemplate을 사용하는 UserDao 메소드에선 꼭 필요한 경우에만 런타임 예외인 `DataAccessException`을 잡아 처리하면 된다.
